[Wayland] Mochitest clipboard failures
Categories
(Core :: Widget: Gtk, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox89 | --- | fixed |
People
(Reporter: stransky, Assigned: stransky)
References
(Blocks 2 open bugs)
Details
Attachments
(1 file)
There are some clipboard failures on Mochitest related to wayland. Running locally as:
MOZ_ENABLE_WAYLAND=1 ./mach mochitest --setpref widget.wayland.focus-workaround.enabled=true dom/base/test
dom/base/test/test_bug116083.html
FAIL The clipboard has text/html
SimpleTest.ok@SimpleTest/SimpleTest.js:417:16
hasExpectedFlavors@dom/base/test/test_bug116083.html:67:7
nextTest/<@dom/base/test/test_bug116083.html:110:5
FAIL The clipboard has text/html
SimpleTest.ok@SimpleTest/SimpleTest.js:417:16
hasExpectedFlavors@dom/base/test/test_bug116083.html:67:7
nextTest/<@dom/base/test/test_bug116083.html:110:5
dom/base/test/test_bug166235.html
FAIL uncaught exception - NS_ERROR_FAILURE: Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsITransferable.getTransferData] at doApply@resource://specialpowers/WrapPrivileged.jsm:118:18
apply/<@resource://specialpowers/WrapPrivileged.jsm:260:30
wrapExceptions@resource://specialpowers/WrapPrivileged.jsm:206:12
apply@resource://specialpowers/WrapPrivileged.jsm:244:12
getClipboardData@http://mochi.test:8888/tests/dom/base/test/test_bug166235.html:63:18
testClipboardValue@http://mochi.test:8888/tests/dom/base/test/test_bug166235.html:75:32
@http://mochi.test:8888/tests/dom/base/test/test_bug166235.html:148:21
simpletestOnerror@SimpleTest/SimpleTest.js:2112:18
dom/base/test/test_copypaste.html
FAIL check text/html
SimpleTest.ok@SimpleTest/SimpleTest.js:417:16
copySelectionToClipboard@dom/base/test/copypaste.js:58:9
FAIL check text/html
SimpleTest.ok@SimpleTest/SimpleTest.js:417:16
copySelectionToClipboard@dom/base/test/copypaste.js:58:9
FAIL check text/html
SimpleTest.ok@SimpleTest/SimpleTest.js:417:16
copySelectionToClipboard@dom/base/test/copypaste.js:58:9
FAIL check text/html
SimpleTest.ok@SimpleTest/SimpleTest.js:417:16
copySelectionToClipboard@dom/base/test/copypaste.js:58:9
FAIL check text/html
SimpleTest.ok@SimpleTest/SimpleTest.js:417:16
copySelectionToClipboard@dom/base/test/copypaste.js:58:9
FAIL check text/html
SimpleTest.ok@SimpleTest/SimpleTest.js:417:16
copySelectionToClipboard@dom/base/test/copypaste.js:58:9
Assignee | ||
Comment 1•4 years ago
•
|
||
dom/base/test/test_bug166235.html
FAIL undefined assertion name - got false, expected true
SimpleTest.is@SimpleTest/SimpleTest.js:500:14
copyChildrenToClipboard@dom/base/test/test_bug166235.html:54:7
@dom/base/test/test_bug166235.html:145:26
dom/base/test/test_copypaste.html
FAIL check text/html
SimpleTest.ok@SimpleTest/SimpleTest.js:417:16
copySelectionToClipboard@dom/base/test/copypaste.js:58:9
Assignee | ||
Comment 2•4 years ago
|
||
The command line for testing:
MOZ_ENABLE_WAYLAND=1 MOZ_LOG="WidgetClipboard:5" ./mach mochitest --setpref widget.wayland.focus-workaround.enabled=true dom/base/test/test_copypaste.html
Assignee | ||
Comment 4•4 years ago
|
||
Recently we use fast track clipboard shortcut to get clipboard data when clipboard content is owned by Firefox but
we ask Wayland compositor for clipboard content mime types.
That may lead to a bug when Firefox is faster and sets clipboard content internally but Wayland compositor does not have the content yet.
So use fast track to also get clipboard mime types.
Updated•4 years ago
|
Comment 6•4 years ago
|
||
bugherder |
Assignee | ||
Updated•3 years ago
|
Description
•