Bug 1703763 [Wayland] Use fast track clipboard to get clipboard content when clipboard content is owned by Firefox, r=jhorak

Recently we use fast track clipboard shortcut to get clipboard data when clipboard content is owned by Firefox but
we ask Wayland compositor for clipboard content mime types.

That may lead to a bug when Firefox is faster and sets clipboard content internally but Wayland compositor does not have the content yet.
So use fast track to also get clipboard mime types.

Differential Revision: https://phabricator.services.mozilla.com/D111377